# Assistant

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
Android/: build.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/dev/rohitrai/assistant/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  FullDuplexPass.h  LiveEffectEngine.cpp  LiveEffectEngine.h  SimpleNoiseMaker.cpp  SimpleNoiseMaker.h  ai_chat.cpp  jni.c  jni.cpp  logging.h  native-lib.cpp
Android/app/src/main/cpp/ggml/src/ggml-cpu/arch/arm/: quants.c
Android/app/src/main/cpp/llama.cpp/common/: chat-parser-xml-toolcall.h  chat-parser.h  chat-peg-parser.cpp  chat.h  common.cpp  common.h  json-partial.cpp  json-partial.h  json-schema-to-grammar.cpp  json-schema-to-grammar.h  log.h  peg-parser.cpp  peg-parser.h  sampling.h
Android/app/src/main/cpp/llama.cpp/common/jinja/: caps.cpp  string.cpp  value.cpp
Android/app/src/main/cpp/llama.cpp/ggml/src/: ggml-alloc.c  ggml-backend-impl.h  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-impl.h  ggml-opt.cpp  ggml-quants.c  ggml-quants.h  ggml.c  gguf.cpp
Android/app/src/main/cpp/llama.cpp/ggml/src/ggml-cpu/: common.h  ggml-cpu.c  ops.cpp  quants.c  repack.h  traits.h
Android/app/src/main/cpp/llama.cpp/ggml/src/ggml-cpu/arch/arm/: quants.c
Android/app/src/main/cpp/llama.cpp/include/: llama.h
Android/app/src/main/cpp/llama.cpp/src/: llama-adapter.h  llama-arch.h  llama-batch.h  llama-chat.cpp  llama-context.cpp  llama-context.h  llama-cparams.h  llama-grammar.h  llama-hparams.cpp  llama-hparams.h  llama-impl.cpp  llama-impl.h  llama-kv-cells.h  llama-memory.h  llama-mmap.cpp  llama-model-loader.cpp  llama-model-loader.h  llama-model-saver.cpp  llama-model-saver.h  llama-model.cpp  llama-model.h  llama-sampling.cpp  llama-sampling.h  llama-vocab.cpp  llama-vocab.h  llama.cpp
Android/app/src/main/cpp/llama.cpp/src/models/: qwen3next.cpp
Android/app/src/main/cpp/whisper.cpp/ggml/src/: ggml-alloc.c  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-impl.h  ggml-threading.h  ggml.c
Android/app/src/main/cpp/whisper.cpp/ggml/src/ggml-cpu/: ggml-cpu-impl.h  ggml-cpu.c  ggml-cpu.cpp  ops.cpp  ops.h  quants.h  repack.h  traits.cpp  vec.h
Android/app/src/main/cpp/whisper.cpp/ggml/src/ggml-cpu/amx/: amx.h
Android/app/src/main/cpp/whisper.cpp/include/: whisper.h
Android/app/src/main/cpp/whisper.cpp/src/: whisper-arch.h  whisper.cpp
Android/app/src/main/java/dev/rohitrai/assistant/: AiChat.kt  FileType.kt  GgufMetadata.kt  GgufMetadataReader.kt  GgufMetadataReaderImpl.kt  InferenceEngine.kt  InferenceEngineImpl.kt  LibWhisper.kt  LlamaMainScreen.kt  LlamaMainScreenViewModel.kt  MainActivity.kt  MainScreen.kt  MainScreenViewModel.kt  MessageAdapter.kt  Recorder.kt  RiffWaveHelper.kt  WhisperCpuConfig.kt
Android/app/src/main/java/dev/rohitrai/assistant/data/: Choice.kt  Message.kt  Ping.kt  Request.kt  Response.kt
Android/app/src/main/java/dev/rohitrai/assistant/network/: AssistantApiService.kt
Android/app/src/main/java/dev/rohitrai/assistant/ui/component/: MessageBox.kt  MicButton.kt  SendButton.kt  TextInput.kt
Android/app/src/main/java/dev/rohitrai/assistant/ui/screen/: AudioDeviceInfoConverter.kt  AudioDeviceListEntry.kt  DuplexStreamForegroundService.kt  LiveEffectEngine.kt  MainScreen.kt  MainScreenViewModel.kt  RiffWaveHelper.kt  WhisperCpuConfig.kt
Android/app/src/main/java/dev/rohitrai/assistant/ui/theme/: Color.kt  Colors.kt  Shape.kt  Theme.kt  Type.kt
Android/app/src/main/res/drawable/: ic_launcher_foreground.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/main/res/xml/: network_security_config.xml
Android/app/src/test/java/dev/rohitrai/assistant/: ExampleUnitTest.kt
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Backend/express-js/: index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.ts
Backend/express-js/src/: STT.ts
Backend/nest-js/: package-lock.json  package.json
Backend/nest-js/src/: app.controller.ts  app.service.ts  main.ts
Backend/nest-js/src/STT/: index.ts
Backend/nest-js/src/STT/wasm/: ort-wasm-simd-threaded.asyncify.mjs
Backend/nest-js/src/assets/wasm/: ort-wasm-simd-threaded.jsep.mjs  ort-wasm-simd-threaded.jspi.mjs  ort-wasm-simd-threaded.mjs
Backend/nest-js/src/events/: events.gateway.ts  events.module.ts
Backend/nest-js/src/providers/: MCPClient.ts  STT.ts
Backend/nest-js/src/utils/: types.ts
Linux/: dev.rohitrai.Assistant.yaml
Linux/Assistant/: CMakeLists.txt  Main.qml  audio.cpp  audio.h  main.cpp
MCP/node-js/: package-lock.json  package.json
MCP/node-js/src/: index.ts
WebApp/: index.html  package-lock.json  package.json
WebApp/src/: App.tsx  index.css  main.tsx
WebApp/src/components/: AssistantResponseView.tsx  AssistantThinkingView.tsx  AssistantToolView.tsx  AudioInput.tsx  ConversationView.tsx  MessageView.tsx  UserMessageView.tsx
WebApp/src/utils/: Whisper.tsx  icons.tsx  types.tsx
src/: App.tsx  index.css
src/components/: AssistantThinkingView.tsx  ConversationView.tsx  Homepage.tsx
src/utils/: constants.ts
